# libcdel

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  config.h  configure  configure.ac  libcdel.pc  libcdel.pc.in  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
ide/ecb/: libcdel.cbproj  libcdel.cbproj.local  libcdel.dsk  libcdel.~dsk
ide/ecb/__history/: libcdel.cbproj.local.~1~
ide/libcdel.xcodeproj/: project.pbxproj
ide/libcdel.xcodeproj/xcuserdata/Chris.xcuserdatad/xcschemes/: xcschememanagement.plist
ide/nbproject/: configurations.xml  project.xml
ide/nbproject/private/: Default.properties
ide/vs/: dllmain.c  libcdel.aps  libcdel.rc  libcdel.sln  libcdel.vcxproj  libcdel.vcxproj.filters  resource.h
libcdel.xcodeproj/: project.pbxproj
libcdel.xcodeproj/xcuserdata/Chris.xcuserdatad/xcschemes/: libcdel.xcscheme
libcdel_test/: libcdel tests.cbp  libcdel tests.depend  libcdel tests.layout  libcdel tests.layout.save  main.c  main.c.save
nbproject/private/: configurations.xml  private.xml
src/: Makefile.am  Makefile.in  base16.c  base2.c  base32.c  base58.c  base64.c  lib.c  libcdel.c  libcdel.h
tests/libcdel_tests/: EncodingTestFile.txt  main.c
tests/libcdel_tests/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
tests/libcdel_tests/nbproject/private/: private.xml
vs2013/: libcdel.vcxproj  libcdel.vcxproj.filters
